# SD_SaaS_Project

./: .gitignore  .gitmodules  .path_env  README.md  isw_updating_script.lua  main.py  paths_full.py  paths_rel.py  pyproject.toml  requirements.txt  weather_forecast_script.py
0_data_scrapping/: isw_updating_script.lua  telegram_script.py  ukraine_alarms_script.py  weather_forecast_script.py  weather_history_script.py
1_data_preparation/: 1_isw_tf_idf_calc_notebook.py  2_prepare_final_dataset_notebook.py  prepare_alarms_from_telegram_logs.py  prepare_final_history_dataset.py  prepare_final_new_dataset.py
1_data_visualization/: visualization.ipynb
2_data_preparation/: 2-tfidf-step-exec-notebook.ipynb  3_prepare_final_dataset.ipynb  4-training.py  text_preprocessing.py
2_data_visualization/: data_analysis.py  visualization.ipynb  visualization_alarms.ipynb  visualization_isw.ipynb  visualization_merged.ipynb  visualization_weather.ipynb
3_model_training/: 3_0_data_splitting.py  model_training.py  timeseries_training_testing.py
Api/: .gitignore  Api.csproj  DateTimeExtensions.cs  Dockerfile  Program.cs  UrlHelpers.cs  docker-compose.yml
data_visualization/: visualization.ipynb
eclipses_feature/: eclipses_feature.py
holidays_feature/: holidays_feature.py
number_of_alarmed_regions/: number_of_regions_with_alarm_feature.py
preprocessing/: 2-tfidf-step-exec-notebook.ipynb  deepnote-tfidf-step-exec-notebook.ipynb  isw-preprocessing.nextjournal.md  tfidf-step-exec-notebook.ipynb
scrapping/: isw_updating_script.lua
utils/: isw_tfidf_out.py  (+3 more)
(+43 files in other folders)
