[tool.poetry]
name = "sd-saas-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-events = "0.6.3"
jupyter-client = "8.1.0"
jupyter-core = "5.3.0"
jupyter_server = "2.5.0"
jupyter-server-terminals = "0.4.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.7"
numpy = "1.24.2"
pandas = "2.0.0"
ipykernel = "6.22.0"
ipython = "8.12.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.0.6"
scikit-learn = "1.2.2"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
