[tool.poetry]
name = "sd-saas-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "1.24.2"
pandas = "2.0.0"
ipykernel = "6.22.0"
ipython = "8.12.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.0.6"
scikit-learn = "1.2.2"
python-dotenv = "1.0.0"
duckdb = "^0.7.1"
duckdb-engine = "^0.7.0"
jupysql = "^0.7.0"
jupytext = "^1.14.5"
matplotlib = "^3.7.1"
nltk = "^3.8.1"
num2words = "^0.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
